[build-system]
requires = ["hatchling", "scikit-learn>=0.21.2", "scipy>=1.2.3", "matplotlib"]
build-backend = "hatchling.build"

[project]
name = "casimac"
version = "1.0"
authors = [{ name="Raoul Heese", email="raoul.heese@gmail.com" }]
description = "Supervised multi-class/single-label classification"
readme = "README.rst"
license = { file="LICENSE" }
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/RaoulHeese/casimac"