[tool.poetry]
name = "casimac"
version = "0.1.0"
description = ""
authors = ["Martin Bubel <martin.bubel@itwm.fraunhofer.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.24.2"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.1"
GPy = { git = "https://github.com/MartinBubel/GPy.git" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
