##########################
# Setup.py Configuration #
##########################

[metadata]
name = casimac
version = 1.2.1
description = Supervised multi-class/single-label classification with gradients
long_description = file: README.rst
long_description_content_type = text/x-rst

# URLs associated with the project
url = https://github.com/RaoulHeese/casimac
download_url = https://github.com/RaoulHeese/casimac
project_urls =
    Source Code = https://github.com/RaoulHeese/casimac
	
# Author information
author = Raoul Heese
author_email = raoul.heese@gmail.com
maintainer = Raoul Heese
maintainer_email = raoul.heese@gmail.com

# License information
license = MIT
license_files = LICENSE

[options]
install_requires =
	numpy
    scikit-learn
	scipy
	matplotlib
	GPy

packages = find:
package_dir =
    = src

[options.packages.find]
where = src